trunk/Archive2/9f/659174accc222b/output
main.cpp:1:1: error: expected unqualified-id before '<' token
 <i>italics</i>
 ^
